menu is updated

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Italianno&family=Open+Sans:wght@300;400&display=swap');
 
 :root{
-    --primary-color:#405685;
+    --primary-color:#111c33;
+    --secondry-color:#7689b3;
 }
 
 *{
@@ -33,10 +34,122 @@ h2{
     margin-bottom: 15px;
 }
 
-.container{
-    margin: auto;  
-}
+/* Menu start from here */
 
+.container2{
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(rgba(0,0,0,.4), 
+                                rgba(148, 48,48,.2), 
+                                rgba(167, 67,67,.4)), 
+                                url(images/img2.png) center no-repeat;
+    background-size: cover;
+    
+  }
+  
+  .navbar{
+    width: 300px;
+    height: 100%;
+    background-color: var(--primary-color);
+    position: fixed;
+    top: 0px;
+    right: -300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10% 0 0 50% ;
+    transition: right .5s cubic-bezier(1. 0. 0. 1);
+    z-index: 11;
+  }
+  
+  .change {
+    right: 0px;
+  }
+  
+  .hamburger-menu{
+    width: 35px;
+    height: 30px;
+    position: fixed;
+    top: 50px;
+    right: 50px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  
+  .line {
+    width: 100%;
+    height: 3px;
+    background-color: var(--secondry-color);
+    transition: all 0.8s;
+  }
+  
+  .change .line-1 {
+    transform: rotateZ(-405deg) translate(-8px, 6px);
+  }
+  
+  .change .line-2 {
+    opacity: 0;
+  }
+  
+  .change .line-3 {
+    transform: rotateZ(405deg) translate(-8px, -6px);  
+  }
+  
+  .nav-list{
+    text-align: right;
+  
+  }
+  
+  .nav-item{
+    list-style: none;
+    margin: 25px;
+  }
+  
+  .nav-link{
+    text-decoration: none;
+    font-size: 15px;
+    color: #eeeeee;
+    font-weight: 300;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    position: relative;
+    padding: 4px 0;
+  }
+  
+  .nav-link::before,
+  .nav-link::after{
+    content: "";
+    width: 100%;
+    height: 2px;
+    background-color: var(--secondry-color);
+    position: absolute;
+    left: 0px;
+    transform: scaleX(0);
+    transition: transform 0.5s;
+  }
+  
+  .nav-link::after {
+    bottom: 0px;
+    transform-origin: right;
+  }
+  
+  .nav-link::before {
+    top: 0px;
+    transform-origin: left;
+  }
+  
+  .nav-link:hover::before,
+  .nav-link:hover::after{
+    transform: scaleX(1);
+  }
+
+/* main page start from here */
+.container{
+    margin: auto; 
+    width: 100%; 
+}
 
 .showcase{
     position: relative;
@@ -54,12 +167,12 @@ h2{
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     overflow: hidden;
     background: var(--primary-color) url('cover.jpg') no-repeat center center/cover;
 }
 .video-container video{
-    min-width: 100%;
+    width: 100%;
     min-height: 100%;
     object-fit: cover;
     position: absolute;
@@ -73,7 +186,7 @@ h2{
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background:rgba(0,0,0, 0.6);
 }
 .content{
@@ -92,7 +205,7 @@ h2{
 }
 .btn:hover { 
     transform: scale(0.95);
-    background: cornflowerblue;
+    background: var(--secondry-color);
 }
 
 /*Gallery section start from here*/
@@ -112,7 +225,7 @@ h2{
     position: relative;
     width: 100%;
     height: 150px;
-    background: #ff0;
+    background: var(--secondry-color);
     margin: 2px;
     box-sizing: border-box;
     display: inline-block;
@@ -169,8 +282,8 @@ h2{
   .container1 .box .details .content h2 {
     margin: 0;
     padding: 0;
-    font-size: bold;
-    color: rgb(255, 133, 19);
+    font-size: 25px;
+    color: var(--secondry-color);
     line-height: 1em;
   }
 
