--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Italianno&family=Open+Sans:wght@300;400&display=swap');
 
 :root{
-    --primary-color:#111c33c7;
-    --secondry-color:#ff9100;
+    --primary-color:#102146cc;
+    --secondry-color:#ffae00;
 }
 
 *{
