--- a/css/style.css
+++ b/css/style.css
@@ -488,20 +488,20 @@ h2{
 /* Exhibition page info start from here. */
 .exhibition-part{
   background: rgb(255, 0, 0);
-  display: inline-block;
   padding-top: 10px;
-  position: relative;
+  width: 100%;
 }
 
 .container10{
-  width: 540px;
+  width: 100%;
   margin: 40px auto;
   overflow: auto;
+  align-content: center;
 }
 
 .slider-inner{
-  width: 500px;
-  height: 300px;
+  width: 98%;
+  height: 400px;
   position: relative;
   overflow: hidden;
   float: left;
@@ -511,8 +511,8 @@ h2{
 
 .slider-inner img{
   display: none;
-  width: 500px;
-  height: 300px;
+  width: 100%;
+  height: 400px;
 }
 
 .slider-inner img.active{
@@ -521,18 +521,18 @@ h2{
 
 .prev,.next{
   float: left;
-  margin-top: 130px;
+  margin-top: 170px;
   cursor: pointer;
 }
 
 .prev{
   position: relative;
-  margin-right: -45px;
+  margin-right: -50px;
   z-index: 100;
 }
 
 .next{
   position: relative;
-  margin-left: -45px;
+  margin-left: -50px;
   z-index: 100;
 }
