--- a/css/style.css
+++ b/css/style.css
@@ -330,7 +330,7 @@ h2{
   background: var(--primary-color);
   padding: 50px;
   width: 100%;
-  height: auto;
+  height: 100vh;
   display: flex;
   flex-direction: row; 
   
