--- a/css/style.css
+++ b/css/style.css
@@ -331,23 +331,23 @@ h2{
   padding: 50px;
   width: 100%;
   height: 100vh;
-  display: flex;
-  flex-direction: row; 
-  
+  display: inline-table;
 }
 
 #company .about-back{
   color: var(--secondry-color);
   padding: 10px;
   margin: auto;
-  text-align: center;
+  text-align: left;
   width: 90%;
-  position: relative;
+}
+
+.about-back h4{
+  text-align: center;
 }
 
 #company .about-image{
   width: 40%;
-  background: yellow;
 }
 
 #company h4{
@@ -366,7 +366,6 @@ h2{
 #company a{
   color: #fff;
 }
-
 
 /*Social media section starting from here*/
 
@@ -418,8 +417,6 @@ h2{
   transform: scaleY(1);
 }
 
-
-
 /* FOOTER */
 
 #main-footer{
@@ -427,8 +424,6 @@ h2{
   color: #fff;
   padding: 12px;
 }
-
-
 
 /* MEDIA QUERIES */
 @media(max-width:800px){
