color and index.html page update

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Italianno&family=Open+Sans:wght@300;400&display=swap');
 
 :root{
-    --primary-color:#102146cc;
-    --secondry-color:#ffae00;
+    --primary-color:#060f24cc;
+    --secondry-color:#be700a;
 }
 
 *{
